Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 2.9.0
-
ghx-label-5
Description
Query
insert into store_sales partition(ss_sold_date_sk) /*+ clustered,shuffle */ select *, mod(cast(rand(7) * 1000000000 as int),2) from store_sales_source
version
[vd1317.halxg.cloudera.com:21000] > version; Shell version: Impala Shell v2.8.0-cdh5.11.0 (e09660d) built on Tue Mar 21 04:21:59 PDT 2017 Server version: impalad version 2.9.0-SNAPSHOT RELEASE (build 9d08cd4e192d964900a17715a98ea1928ef07ae8) [
Target table DDL
| CREATE EXTERNAL TABLE table_level_tests.store_sales ( | | ss_sold_time_sk INT, | | ss_item_sk BIGINT, | | ss_customer_sk INT, | | ss_cdemo_sk INT, | | ss_hdemo_sk INT, | | ss_addr_sk INT, | | ss_store_sk INT, | | ss_promo_sk INT, | | ss_ticket_number BIGINT, | | ss_quantity INT, | | ss_wholesale_cost DECIMAL(7,2), | | ss_list_price DECIMAL(7,2), | | ss_sales_price DECIMAL(7,2), | | ss_ext_discount_amt DECIMAL(7,2), | | ss_ext_sales_price DECIMAL(7,2), | | ss_ext_wholesale_cost DECIMAL(7,2), | | ss_ext_list_price DECIMAL(7,2), | | ss_ext_tax DECIMAL(7,2), | | ss_coupon_amt DECIMAL(7,2), | | ss_net_paid DECIMAL(7,2), | | ss_net_paid_inc_tax DECIMAL(7,2), | | ss_net_profit DECIMAL(7,2) | | ) | | PARTITIONED BY ( | | ss_sold_date_sk INT | | ) | | STORED AS PARQUET
Stack
(gdb) bt #0 0x0000003655832625 in raise () from /lib64/libc.so.6 #1 0x0000003655833e05 in abort () from /lib64/libc.so.6 #2 0x00007f1ec26d2a55 in os::abort(bool) () from /usr/java/jdk1.7.0_67-cloudera/jre/lib/amd64/server/libjvm.so #3 0x00007f1ec2852f87 in VMError::report_and_die() () from /usr/java/jdk1.7.0_67-cloudera/jre/lib/amd64/server/libjvm.so #4 0x00007f1ec26d796f in JVM_handle_linux_signal () from /usr/java/jdk1.7.0_67-cloudera/jre/lib/amd64/server/libjvm.so #5 <signal handler called> #6 impala::HdfsTableSink::WriteRowsToPartition (this=0x2136b900, state=0x213a0700, batch=0x217400a0, partition_pair=0x7f185da2e658) at /data/jenkins/workspace/impala-private-build-binaries/repos/Impala/be/src/exec/hdfs-table-sink.cc:281 #7 0x0000000000d0069e in impala::HdfsTableSink::WriteClusteredRowBatch (this=0x2136b900, state=Unhandled dwarf expression opcode 0xf3 ) at /data/jenkins/workspace/impala-private-build-binaries/repos/Impala/be/src/exec/hdfs-table-sink.cc:328 #8 0x0000000000d00e95 in impala::HdfsTableSink::Send (this=0x2136b900, state=0x213a0700, batch=0x217400a0) at /data/jenkins/workspace/impala-private-build-binaries/repos/Impala/be/src/exec/hdfs-table-sink.cc:630 #9 0x0000000000de2dbb in impala::PlanFragmentExecutor::ExecInternal (this=0x1484e2d0) at /data/jenkins/workspace/impala-private-build-binaries/repos/Impala/be/src/runtime/plan-fragment-executor.cc:366 #10 0x0000000000de4fcd in impala::PlanFragmentExecutor::Exec (this=0x1484e2d0) at /data/jenkins/workspace/impala-private-build-binaries/repos/Impala/be/src/runtime/plan-fragment-executor.cc:337 #11 0x0000000000dde2c8 in impala::FragmentInstanceState::Exec (this=0x1484e000) at /data/jenkins/workspace/impala-private-build-binaries/repos/Impala/be/src/runtime/fragment-instance-state.cc:68 #12 0x0000000000de75ff in impala::QueryExecMgr::ExecFInstance (this=0x112f85a0, fis=0x1484e000) at /data/jenkins/workspace/impala-private-build-binaries/repos/Impala/be/src/runtime/query-exec-mgr.cc:110 #13 0x0000000000bd9e29 in operator() (name=Unhandled dwarf expression opcode 0xf3 ) at /data/jenkins/workspace/impala-private-build-binaries/repos/Impala/toolchain/boost-1.57.0-p1/include/boost/function/function_template.hpp:767 #14 impala::Thread::SuperviseThread (name=Unhandled dwarf expression opcode 0xf3 ) at /data/jenkins/workspace/impala-private-build-binaries/repos/Impala/be/src/util/thread.cc:325 #15 0x0000000000bda874 in operator()<void (*)(const std::basic_string<char>&, const std::basic_string<char>&, boost::function<void()>, impala::Promise<long int>*), boost::_bi::list0> (this=0x233ed200) at /data/jenkins/workspace/impala-private-build-binaries/repos/Impala/toolchain/boost-1.57.0-p1/include/boost/bind/bind.hpp:457 #16 operator() (this=0x233ed200) at /data/jenkins/workspace/impala-private-build-binaries/repos/Impala/toolchain/boost-1.57.0-p1/include/boost/bind/bind_template.hpp:20 #17 boost::detail::thread_data<boost::_bi::bind_t<void, void (*)(const std::basic_string<char, std::char_traits<char>, std::allocator<char> >&, const std::basic_string<char, std::char_traits<char>, std::allocator<char> >&, boost::function<void()>, impala::Promise<long int>*), boost::_bi::list4<boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<boost::function<void()> >, boost::_bi::value<impala::Promise<long int>*> > > >::run(void) (this=0x233ed200) ---Type <return> to continue, or q <return> to quit--- at /data/jenkins/workspace/impala-private-build-binaries/repos/Impala/toolchain/boost-1.57.0-p1/include/boost/thread/detail/thread.hpp:116 #18 0x0000000000e4631a in thread_proxy () #19 0x0000003655c07aa1 in start_thread () from /lib64/libpthread.so.0 #20 0x00000036558e893d in clone () from /lib64/libc.so.6