IMPALA-5115: Handle status from HdfsTableSink::WriteClusteredRowBatch

Change-Id: Id6f5d87ae5e46d6019d9988011d3f2657e81ae15
Reviewed-on: http://gerrit.cloudera.org:8080/6486
Reviewed-by: Marcel Kornacker <marcel@cloudera.com>
Tested-by: Impala Public Jenkins